adding the profile

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   </head>
   <body>
      <div id="container">
+      <div id="profile">
+        <img src="./assets/avatar.png">
+        <p>@developer</p>
+      </div>
       </div>
      </div>
   </body>
