Adding link menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
         <img src="./assets/avatar.png">
         <p>@developer</p>
       </div>
+      <ul>
+        <li>
+          <a href="https://rocketseat.com.br/nlw" target="_blank">Inscreva-se no NLW</a>
+        </li>
+        <li>
+          <a href="#">Baixe meu e-book</a>
+        </li>
+        <li>
+          <a href="https://github.com/luiz-munck" target="_blank">Veja meu portfólio</a>
+        </li>
+        <li>
+          <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o Explorer</a>
+        </li>
+      </ul>
       </div>
      </div>
   </body>
