Adding social links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
           <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o Explorer</a>
         </li>
       </ul>
-      </div>
-     </div>
+     <div id="social-links">
+         <a href="https://github.com/luiz-munck" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+         </a>
+         <a href="https://instagram.com" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+         </a>
+         <a href="https://youtube.com" target="_blank">
+          <ion-icon name="logo-youtube"></ion-icon>
+         </a>
+         <a href="https://www.linkedin.com/in/luiz-munck-b079001b5/" target="_blank">
+          <ion-icon name="logo-linkedin"></ion-icon>
+         </a>
+        </div>
+    </div>
+   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
