Adding the footer

--- a/index.html
+++ b/index.html
@@ -13,41 +13,61 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-     <div id="container">
+    <div id="container">
       <div id="profile">
-        <img src="./assets/avatar.png">
+        <img src="./assets/avatar.png" />
         <p>@developer</p>
       </div>
       <ul>
         <li>
-          <a href="https://rocketseat.com.br/nlw" target="_blank">Inscreva-se no NLW</a>
+          <a href="https://rocketseat.com.br/nlw" target="_blank"
+            >Inscreva-se no NLW</a
+          >
         </li>
         <li>
           <a href="#">Baixe meu e-book</a>
         </li>
         <li>
-          <a href="https://github.com/luiz-munck" target="_blank">Veja meu portfólio</a>
+          <a href="https://github.com/luiz-munck" target="_blank"
+            >Veja meu portfólio</a
+          >
         </li>
         <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o Explorer</a>
+          <a href="https://rocketseat.com.br/explorer" target="_blank"
+            >Conheça o Explorer</a
+          >
         </li>
       </ul>
-     <div id="social-links">
-         <a href="https://github.com/luiz-munck" target="_blank">
+      <div id="social-links">
+        <a href="https://github.com/luiz-munck" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
-         </a>
-         <a href="https://instagram.com" target="_blank">
+        </a>
+        <a href="https://instagram.com" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
-         </a>
-         <a href="https://youtube.com" target="_blank">
+        </a>
+        <a href="https://youtube.com" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
-         </a>
-         <a href="https://www.linkedin.com/in/luiz-munck-b079001b5/" target="_blank">
+        </a>
+        <a
+          href="https://www.linkedin.com/in/luiz-munck-b079001b5/"
+          target="_blank"
+        >
           <ion-icon name="logo-linkedin"></ion-icon>
-         </a>
-        </div>
+        </a>
+      </div>
+      <footer>
+        Feito com ♥ pela <a href="https://rocketseat.com.br" target="_blank"
+          >Rocketseat</a
+        >
+      </footer>
     </div>
-   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
