Creating button for light/dark theme switch

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <img src="./assets/avatar.png" />
         <p>@developer</p>
       </div>
+      <div id="switch">
+        <button></button>
+        <span></span>
+      </div>
       <ul>
         <li>
           <a href="https://rocketseat.com.br/nlw" target="_blank"
