--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="./assets/avatar.png" />
         <p>@developer</p>
       </div>
-      <div id="switch">
+      <div id="switch" onclick="toggleMode()">
         <button></button>
         <span></span>
       </div>
@@ -73,5 +73,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="./script.js"></script>
   </body>
 </html>
